# ectusr2

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker.yml
deploy/helm/ectusr2/: README.md  values.yaml
deploy/helm/ectusr2/templates/: _helpers.tpl  deployment.yaml  hpa-workers.yaml  rbac.yaml  service.yaml
src/: config.rs  errors.rs  main.rs  util.rs
src/api/: client.rs
src/budget/: mod.rs
src/mcp/: mod.rs  server.rs  types.rs
src/orchestrator/: kubernetes.rs  mod.rs
src/prompts/: get.rs  list.rs  mod.rs
src/resources/: registry.rs
src/tools/: mod.rs
