[package]
name = "ectusr2"
version = "0.1.0"
edition = "2021"
description = "Ectus-R MCP server in Rust (code generation, QA, refactoring)"
authors = ["Yatrosoft"]
license = "MIT"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
url = "2.5"
dotenvy = "0.15"
futures = "0.3"
bytes = "1.6"
uuid = { version = "1.8", features = ["v4", "serde"] }
time = "0.3"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal"] }
async-trait = "0.1"
# Optional orchestration deps (enable with --features kubernetes)
kube = { version = "0.88", features = ["runtime","derive","client"], optional = true }
k8s-openapi = { version = "0.22", features = ["latest"], optional = true }
# Optional metrics deps (enable with --features metrics)
once_cell = { version = "1.19", optional = true }
prometheus = { version = "0.13", optional = true }
hyper = { version = "0.14", features = ["server","http1","tcp"], optional = true }

[features]
default = []
kubernetes = ["kube", "k8s-openapi"]
metrics = ["prometheus", "hyper", "once_cell"]
aws = []
gcp = []
azure = []
local = []

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
